--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -21,7 +21,7 @@ export default ComponentLayout
 
 ## Usage
 
-The Section component is a versatile layout tool designed It serves as a container that can be customized to fit various design needs.
+The Section component is a versatile layout tool. It serves as a container that can be customized to fit various design needs.
 
 Use the Section component to create distinct blocks of related content within a page, enhancing both the structure and the layout. Use it to break up long pages into more digestible segments, making the content more approachable for users.
 
