Add missing props

--- a/apps/docs/content/components/Section/react.mdx
+++ b/apps/docs/content/components/Section/react.mdx
@@ -147,11 +147,14 @@ The default `Section` wraps its content in a semantic `<section>` element and pr
 
 ### Section
 
-| name                      | type                                                                                                  | default    | required | description                                                                                                                                                   |
-| ------------------------- | ----------------------------------------------------------------------------------------------------- | ---------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> `ResponsiveMap`              | `'normal'` | `false`  | Control the padding at the top of the section.                                                                                                                |
-| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> `ResponsiveMap`              | `'normal'` | `false`  | Control the padding at the bottom of the section.                                                                                                             |
-| `backgroundColor`         | <PropTableValues values={[...SectionBackgroundColors]} commaSeparated  /> \| `string` `ResponsiveMap` |            | `false`  | Add a background color. Use a predefined color, a CSS custom property, or a custom color value.                                                               |
-| `backgroundImageSrc`      | `string` \| `string[]` `ResponsiveMap`                                                                |            | `false`  | Add one or more background images.                                                                                                                            |
-| `backgroundImageSize`     | `string` \| `string[]` `ResponsiveMap`                                                                | `'cover'`  | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `contain`.                      |
+| name                      | type                                                                                                  | default     | required | description                                                                                                                                                   |
+| ------------------------- | ----------------------------------------------------------------------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> `ResponsiveMap`              | `'normal'`  | `false`  | Control the padding at the top of the section.                                                                                                                |
+| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> `ResponsiveMap`              | `'normal'`  | `false`  | Control the padding at the bottom of the section.                                                                                                             |
+| `backgroundColor`         | <PropTableValues values={[...SectionBackgroundColors]} commaSeparated  /> \| `string` `ResponsiveMap` |             | `false`  | Add a background color. Use a predefined color, a CSS custom property, or a custom color value.                                                               |
+| `backgroundImageSrc`      | `string` \| `string[]` `ResponsiveMap`                                                                |             | `false`  | Add one or more background images.                                                                                                                            |
+| `backgroundImageSize`     | `string` \| `string[]` `ResponsiveMap`                                                                | `'cover'`   | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `contain`.                      |
 | `backgroundImagePosition` | `string` \| `string[]` `ResponsiveMap`                                                                | `'50%'`     | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
+| `rounded`                 | `boolean`                                                                                             | `false`     | `false`  | Adds rounded conterns to the top of the section.                                                                                                              |
+| `fullWidth`               | `boolean`                                                                                             | `false`     | `false`  | Makes the container fill the entire width of the section.                                                                                                      |
+| `as`                      | `section'`, `'div'`                                                                                   | `'section'` | `false`  | Applies the underlying HTML element.                                                                                                                          |
