update `FormControl.Hint` documentation

--- a/apps/docs/content/components/FormControl.mdx
+++ b/apps/docs/content/components/FormControl.mdx
@@ -279,6 +279,8 @@ render(App)
 
 ### Hint
 
+`FormControl.Hint` can be used to provide additional context or guidance to the user. `FormControl.Hint` must be a direct child of `FormControl`.
+
 ```jsx live
 <FormControl>
   <FormControl.Label>Select</FormControl.Label>
