--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -1,151 +1,50 @@
 ---
 title: Section
-status: Experimental
-source: https://github.com/primer/brand/tree/main/packages/react/src/Section/Section.tsx
-storybook: '/brand/storybook/?path=/story/components-section--default'
-description: Use the section component to group related content together.
-a11yReviewed: false
+description: Use a Section to group and structure related content on a page.
 ---
 
-import {PropTableValues} from '../../../src/components'
-import {
-  SectionBackgroundColors,
-  SectionPaddingVariants,
-} from '@primer/react-brand'
+import ComponentLayout from '../../../src/layouts/component-layout'
+import anatomy from './images/anatomy.png'
 
-```js
-import {Section} from '@primer/react-brand'
-```
+export default ComponentLayout
 
-## Examples
+## Anatomy
 
-### Default
+<img
+  src={anatomy}
+  alt="The anatomy of the section component illustrates the various elements that make it up."
+/>
 
-The default `Section` wraps its content in a semantic `<section>` element and provides default paddings.
+- **Container:** Wraps the content to ensure proper alignment and responsiveness across different viewports.
+- **Padding:** Customizable padding at the top and bottom of the section to suit different content needs.
+- **Background:** Options to customize the background with colors or images.
 
-```jsx live
-<Section>
-  <SectionIntro align="center">
-    <SectionIntro.Heading size="3">Default section</SectionIntro.Heading>
-    <SectionIntro.Description>
-      This content is wrapped in a Section component.
-    </SectionIntro.Description>
-  </SectionIntro>
-</Section>
-```
+## Usage
 
-### With indepenedent block paddings
+The Section component is a versatile layout tool. It serves as a container that can be customized to fit various design needs.
 
-```jsx live
-<Section paddingBlockStart="none" paddingBlockEnd="spacious">
-  <SectionIntro align="center">
-    <SectionIntro.Heading size="3">Custom paddings</SectionIntro.Heading>
-    <SectionIntro.Description>
-      This section has a custom padding at the top and bottom.
-    </SectionIntro.Description>
-  </SectionIntro>
-</Section>
-```
+Use the Section component to create distinct blocks of related content within a page, enhancing both the structure and the layout. Use it to break up long pages into more digestible segments, making the content more approachable for users.
 
-### With predefined background color
+### Content Grouping
 
-```jsx live
-<Section backgroundColor="subtle">
-  <SectionIntro align="center">
-    <SectionIntro.Heading size="3">Predefined background</SectionIntro.Heading>
-    <SectionIntro.Description>
-      This section has a predefined background color.
-    </SectionIntro.Description>
-  </SectionIntro>
-</Section>
-```
+Use the Section component to group related elements together, such as one or more subsections containing text, images, links and other compositions that share a common theme.
 
-### With custom background color
+### Semantics and headings
 
-```jsx live
-<Section backgroundColor="#FFF8F8">
-  <SectionIntro align="center">
-    <SectionIntro.Heading size="3">Custom background</SectionIntro.Heading>
-    <SectionIntro.Description>
-      This section uses a custom background color.
-    </SectionIntro.Description>
-  </SectionIntro>
-</Section>
-```
+The Section component is a semantic element used to create a new section within a page. It should include a heading to title the section. You may use the [section intro component](/components/SectionIntro) or rely top-level components like Hero that already provide the required heading. Ensure that the heading level is appropriate for the content hierarchy.
 
-### With background image
+### Visual Separation
 
-```jsx live
-<ThemeProvider colorMode="dark">
-  <Section
-    backgroundImageSrc="https://github.com/user-attachments/assets/068634a3-926d-49b8-b949-0b1e2a204651"
-    backgroundImageSize="cover"
-    backgroundImagePosition="top center"
-  >
-    <SectionIntro align="center">
-      <SectionIntro.Heading size="3">Section</SectionIntro.Heading>
-      <SectionIntro.Description>
-        This section has a custom background image.
-      </SectionIntro.Description>
-    </SectionIntro>
-  </Section>
-</ThemeProvider>
-```
+Use different backgrounds and paddings to visually differentiate different sections within a page, aiding in content hierarchy and navigation.
 
-### With multiple background images
+###	Grids and responsive design 
 
-```jsx live
-<ThemeProvider colorMode="dark">
-  <Section
-    paddingBlockStart="spacious"
-    paddingBlockEnd="spacious"
-    backgroundColor="default"
-    backgroundImageSrc={[
-      'https://github.com/user-attachments/assets/a7340dea-2076-42da-87a9-057f953beb83',
-      'https://github.com/user-attachments/assets/a28110fd-d019-41a4-8f80-b49ae8895708',
-    ]}
-    backgroundImagePosition={['bottom -1px center', 'center']}
-    backgroundImageSize={['auto', 'cover']}
-  >
-    <SectionIntro align="center">
-      <SectionIntro.Heading size="3" size="3">
-        Multiple background images
-      </SectionIntro.Heading>
-    </SectionIntro>
-  </Section>
-  <Section backgroundColor="default">
-    <SectionIntro align="center">
-      <SectionIntro.Heading size="4">Another section</SectionIntro.Heading>
-    </SectionIntro>
-  </Section>
-</ThemeProvider>
-```
+The container maintains content margins and allows the use of the Grid to consistently align elements across different viewport sizes.
 
-### With rounded corners
+## Related components
 
-```jsx live
-  <ThemeProvider colorMode="dark">
-    <Section backgroundColor="default"></Section>
-  </ThemeProvider>
-  <Section backgroundColor="default" rounded>
-    <SectionIntro align="center">
-      <SectionIntro.Heading size="3">Rounded corners</SectionIntro.Heading>
-        <SectionIntro.Description>
-          This section has rounded top corners that overlap the previous section.
-        </SectionIntro.Description>
-    </SectionIntro>
-  </Section>
-```
+- [SectionIntro](/components/SectionIntro): to add a heading and optional description to the section.
+- [Stack](/components/Stack): to enable layout of its immediate children along the vertical or horizontal axis.
+- [Grid](/components/Grid): to create flexible and responsive grid-based layouts.
+- [Box](/components/Box): to applying one-off styles to an element.
 
-## Component props
-
-### Section
-
-| name                      | type                                                                                                  | default    | required | description                                                                                                                                                   |
-| ------------------------- | ----------------------------------------------------------------------------------------------------- | ---------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> `ResponsiveMap`              | `'normal'` | `false`  | Control the padding at the top of the section.                                                                                                                |
-| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> `ResponsiveMap`              | `'normal'` | `false`  | Control the padding at the bottom of the section.                                                                                                             |
-| `backgroundColor`         | <PropTableValues values={[...SectionBackgroundColors]} commaSeparated  /> \| `string` `ResponsiveMap` |            | `false`  | Add a background color. Use a predefined color, a CSS custom property, or a custom color value.                                                               |
-| `backgroundImageSrc`      | `string` \| `string[]` `ResponsiveMap`                                                                |            | `false`  | Add one or more background images.                                                                                                                            |
-| `backgroundImageSize`     | `string` \| `string[]` `ResponsiveMap`                                                                | `'cover'`  | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `contain`.                      |
-| `backgroundImagePosition` | `string` \| `string[]` `ResponsiveMap`                                                                | `'50%`     | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
