updates site name to Primer Brand UI

--- a/apps/docs/content/index.mdx
+++ b/apps/docs/content/index.mdx
@@ -12,7 +12,7 @@ import {LinkExternalIcon} from '@primer/octicons-react'
     mt: 5,
   }}
 >
-  <Heading as="h4">Primer Marketing UI</Heading>
+  <Heading as="h4">Primer Brand UI</Heading>
   <Text as="p">Read the installation instructions to get started.</Text>
   <PRCBox
     sx={{
