update references to external mona avatar in docs

--- a/apps/docs/content/components/IDE.mdx
+++ b/apps/docs/content/components/IDE.mdx
@@ -181,7 +181,7 @@ See Storybook for a comprehensive example of the Chat feature, inclusive of synt
       {
         role: 'user',
         handle: 'monalisa',
-        avatar: 'https://github.com/mona.png',
+        avatar: '/brand/assets/avatar-mona.png',
         message: 'How do I concatenate two arrays in JavaScript?',
       },
       {
@@ -195,7 +195,7 @@ See Storybook for a comprehensive example of the Chat feature, inclusive of synt
       {
         role: 'user',
         handle: 'monalisa',
-        avatar: 'https://github.com/mona.png',
+        avatar: '/brand/assets/avatar-mona.png',
         message: 'It worked!',
       },
     ]}
