--- a/apps/docs/content/components/Testimonial/react.mdx
+++ b/apps/docs/content/components/Testimonial/react.mdx
@@ -31,7 +31,7 @@ import {Testimonial} from '@primer/react-brand'
     David Ross
   </Testimonial.Name>
   <Testimonial.Avatar
-    src="https://avatars.githubusercontent.com/u/92997159?v=4"
+    src="/brand/assets/avatar-mona.png"
     alt="Circular avatar from David Ross's GitHub profile"
   />
 </Testimonial>
