Replace remote GitHub avatars with local assets (#822)
* add avatar-mona.png as a static asset to Storybook

* add avatar-mona.png as a static asset to docs

* update references to external mona avatar in stories

* update references to external mona avatar in docs

* remove unused `avatar` property from IDE assistant chat message type

* remove unused references to non-existent image at https://github.com/copilot.png

* github-actions[bot] Regenerated snapshots

* replace missing whitespace

* refactored IDEChatMessage types

* add changeset

---------

Co-authored-by: joshfarrant <joshfarrant@users.noreply.github.com>

--- a/apps/docs/content/components/IDE.mdx
+++ b/apps/docs/content/components/IDE.mdx
@@ -181,13 +181,12 @@ See Storybook for a comprehensive example of the Chat feature, inclusive of synt
       {
         role: 'user',
         handle: 'monalisa',
-        avatar: 'https://github.com/mona.png',
+        avatar: '/brand/assets/avatar-mona.png',
         message: 'How do I concatenate two arrays in JavaScript?',
       },
       {
         role: 'assistant',
         handle: 'GitHub Copilot',
-        avatar: 'https://github.com/copilot.png',
         message:
           "To concatenate two arrays in JavaScript, you can use the `concat` method. Here's an example:",
         codeSnippet: `const array1 = [1, 2, 3];\nconst array2 = [4, 5, 6];\nconst resultArray = array1.concat(array2);\nconsole.log(resultArray); // Output: [1, 2, 3, 4, 5, 6]`,
@@ -195,7 +194,7 @@ See Storybook for a comprehensive example of the Chat feature, inclusive of synt
       {
         role: 'user',
         handle: 'monalisa',
-        avatar: 'https://github.com/mona.png',
+        avatar: '/brand/assets/avatar-mona.png',
         message: 'It worked!',
       },
     ]}
